--- a/Assets/css/home.css
+++ b/Assets/css/home.css
@@ -31,11 +31,12 @@
 }
 
 .titulo-home {
-    width: 50%;
+    width: 85%;
     color: var(--color-cool-gray);
-    font-size: 4rem;
+    font-size: 2.5rem;
     margin-top: 3rem;
     margin-left: 3rem;
+    margin-bottom: 2rem;
 }
 
 .subtitulo-home {
@@ -57,7 +58,8 @@
 .parrafo-home {
     align-self: flex-end;
     color: var(--color-blanco);
-    font-size: 1.05rem;
+    font-size: 1.1rem;
+    margin-right: 1rem;
 }
 .home-btn {
     width: 100%;
