--- a/Assets/css/nav.css
+++ b/Assets/css/nav.css
@@ -12,10 +12,11 @@ header {
     background: #fff;
     width: 90%;
     margin: 1rem auto;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     border-radius: 8px;
     padding: 0.5rem 1.5rem;
+    transition: all 0.3s;
 }
 
 .logo {
