--- a/Assets/css/home.css
+++ b/Assets/css/home.css
@@ -70,3 +70,24 @@
 
 
 }
+
+.slider-conteiner {
+    overflow: hidden;
+    position: relative;
+}
+.slider-content {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.slide {
+        min-width: 100%;
+        box-sizing: border-box;
+}
+
+.slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
